# Metis_AI_RAG

./: .clinerules-code  .dockerignore  .env.example  .gitignore  Code_Formatting_Implementation_Details.md  Fixed_SQLAlchemy_Models_Code.md  Metis_RAG_Critical_Analysis_Prompt.md  Metis_RAG_Fix_Plan.md  Metis_RAG_Fix_Plan_Checklist.md  Metis_RAG_Implementation_Checklist.md  Metis_RAG_Implementation_Plan_Part4.md  Metis_RAG_Implementation_Progress_Update.md  Metis_RAG_Improved_System_Prompt.md  Metis_RAG_Improvement_Plan.md  Metis_RAG_Memory_Implementation_Plan.md  Metis_RAG_Response_Format_Analysis.md  Metis_RAG_Response_Format_Simplified_Plan.md  Metis_RAG_Restructuring_Checklist.md  Metis_RAG_Setup_Plan.md  Metis_RAG_Simplified_System_Prompt.md  Metis_RAG_Test_Files_Inventory.md  Metis_RAG_Test_Reorganization_Plan.md  Metis_RAG_Test_Reorganization_Plan_Phase2.md  PLANNING.docx  PLANNING.md  README.docx  README.md  TASK.docx  TASK.md  Text_Formatting_Implementation_Plan.md  Text_Formatting_Test_Results.md  alembic.ini  conftest.py  llm_enhanced_rag_implementation_plan_updated.md  metis_improved_prompt.md  metis_rag_testing_prompt.md  processed_output_20250407_163905.txt  processed_output_20250407_163917.txt  pyproject.toml  raw_output_20250407_163905.txt  (+11 more)
alembic/: env.py
app/: main.py
config/: .env.docker  .env.example  .env.test  Dockerfile  docker-compose.mem0.yml  docker-compose.yml  requirements.txt
data/: metis_rag_visualization.html  test.db
docs/: Metis_RAG_Authentication_Implementation_Detailed_Plan.md  Metis_RAG_Authentication_Testing_Plan.md  Metis_RAG_Memory_Fixes.md  Metis_RAG_PG_MCP_Integration_Plan.md  authentication_demo.html  authentication_system_improvements.md  authentication_testing_guide.md  document_upload_improvements_phase2_plan.md  document_upload_ui_mockup.html  (+5 more)
(+640 files in other folders)
